# movie_talk

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
albums/: models.py  urls.py  views.py
albums/migrations/: 0001_initial.py  0002_album_title.py
albums/templates/albums/: base.html  index.html
movie_talk/: asgi.py  settings.py  urls.py  wsgi.py
movies/: models.py  urls.py  views.py
movies/migrations/: 0001_initial.py  0002_movie_slug_alter_movie_imdb_link_and_more.py
movies/templates/movies/: base.html  detail.html  index.html
nginx/: nginx.conf
selections/: admin.py  models.py  urls.py  views.py
selections/migrations/: 0001_initial.py
selections/templates/selections/: base.html  detail.html  index.html
selections/templates/selections/albums/: base.html  detail.html  index.html
selections/templates/selections/movies/: base.html  detail.html  index.html
