[project]
name = "movie_talk"
version = "0.1.0"
description = "Default template for PDM package"
authors = [{ name = "James Mark", email = "james.david.mark@gmail.com" }]
dependencies = [
    "requests>=2.31.0",
    "django>=5.0.3",
    "pylint-django>=2.5.5",
    "psycopg[binary]>=3.1.18",
    "gunicorn>=21.2.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = { text = "MIT" }

[tool.pdm.scripts]
# Run the server
start.cmd = "python manage.py runserver"
start.env_file = ".env"
# Enter the Python shell
shell.cmd = "python manage.py shell"
shell.env_file = ".env"
# Run any available migraionts
migrate.env_file = ".env"
migrate.cmd = "python manage.py migrate"
# Create migrations from Model updates
makemigrations.cmd = "python manage.py makemigrations"
makemigrations.env_file = ".env"

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
lint = [
    "types-requests>=2.31.0.20240125",
    "mypy>=1.8.0",
    "pylint>=3.0.3",
    "ruff>=0.2.1",
]
